# PrivacyQueryTool

./: README.md  README_zh.md  pyproject.toml  requirements.txt
src/: main.py
